# Copyright 2016 (c) Michael Thomas (malinka) <malinka@entropy-development.com>
# Distributed under the terms of the GNU Affero General Public License v3

ACLOCAL_AMFLAGS = -I m4
#2013-10-11 AMR XXX: non-portable assignment
AM_CXXFLAGS := -I$(srcdir)/src $(AM_CXXFLAGS)

mainheadersdir = $(includedir)/Entropy/Asteria
mainheaders_HEADERS = \
	src/Exception.hh \
	src/Character.hh \
	src/Map.hh

characterheadersdir = $(includedir)/Entropy/Asteria/Character
characterheaders_HEADERS = \
	src/Character/Stats.hh \
	src/Character/Skills.hh \
	src/Character/Item.hh \
	src/Character/Equipment.hh \
	src/Character/Armor.hh \
	src/Character/Weapon.hh

mapheadersdir = $(includedir)/Entropy/Asteria/Map
mapheaders_HEADERS = \
	src/Map/Floor.hh \
	src/Map/Cave.hh \
	src/Map/Object.hh \
	src/Map/Tile.hh

gameheadersdir = $(includedir)/Entropy/Asteria/Game
gameheaders_HEADERS = \
	src/Game/Main.hh

engineheadersdir = $(includedir)/Entropy/Asteria/Game/Engine
engineheaders_HEADERS = \
	src/Game/Engine/Engine.hh \
	src/Game/Engine/Menu.hh \
	src/Game/Engine/Renderer.hh

menuheadersdir = $(includedir)/Entropy/Asteria/Game/Menu
menuheaders_HEADERS = \
	src/Game/Menu/Main.hh \
	src/Game/Menu/New.hh \
	src/Game/Menu/Explore.hh

lib_LTLIBRARIES = libasteria.la

libasteria_la_SOURCES = \
	src/Character.cc \
	src/Character/Item.cc \
	src/Character/Equipment.cc \
	src/Character/Armor.cc \
	src/Character/Weapon.cc \
	src/Map.cc \
	src/Map/Floor.cc \
	src/Map/Cave.cc \
	src/Map/Object.cc \
	src/Map/Tile.cc \
	src/Game/Engine/Engine.cc \
	src/Game/Engine/Renderer.cc \
	src/Game/Menu/Main.cc \
	src/Game/Menu/New.cc \
	src/Game/Menu/Explore.cc \
	src/Game/Main.cc

bin_PROGRAMS = \
	asteria

asteria_SOURCES = src/Game/Asteria.cc
asteria_LDADD = libasteria.la

check_PROGRAMS =

if GTEST
check_PROGRAMS += \
	character-basic \
	floor-cave \
	map-object \
	map-tile \
	map-map \
	game-renderer

# 2016-08-22 AMR TODO: abstract some of this logic to be autogenerated
testLDADD = -lgtest_main -lgtest -lasteria $(AM_LDADD)
testLDFLAGS = -pthread $(AM_LDFLAGS)

character_basic_SOURCES = test/character/basic.cc
character_basic_LDADD = $(testLDADD)
character_basic_LDFLAGS = $(testLDFLAGS)

floor_cave_SOURCES = test/floor/cave.cc
floor_cave_LDADD = $(testLDADD)
floor_cave_LDFLAGS = $(testLDFLAGS)

map_object_SOURCES = test/map/object.cc
map_object_LDADD = $(testLDADD)
map_object_LDFLAGS = $(testLDFLAGS)

map_tile_SOURCES = test/map/tile.cc
map_tile_LDADD = $(testLDADD)
map_tile_LDFLAGS = $(testLDFLAGS)

map_map_SOURCES = test/map/map.cc
map_map_LDADD = $(testLDADD)
map_map_LDFLAGS = $(testLDFLAGS)

game_renderer_SOURCES = test/game/renderer.cc
game_renderer_LDADD = $(testLDADD)
game_renderer_LDFLAGS = $(testLDFLAGS)
endif

TESTSUITE = $(srcdir)/test/testsuite
TESTSUITE_FILES = \
	test/character.at \
	test/map.at \
	test/game.at \
	test/floor.at

EXTRA_DIST = \
	$(TESTSUITE_FILES) \
	$(srcdir)/test/testsuite.at \
	$(srcdir)/package.m4 \
	$(TESTSUITE) \
	$(srcdir)/test/atlocal.in

$(srcdir)/package.m4: $(top_srcdir)/configure.ac
	:; {\
		echo '# Signature of the current package. (auto-generated)' && \
		echo 'm4_define([AT_PACKAGE_NAME],' && \
		echo '  [$(PACKAGE_NAME)])' && \
		echo 'm4_define([AT_PACKAGE_TARNAME],' && \
		echo '  [$(PACKAGE_TARNAME)])' && \
		echo 'm4_define([AT_PACKAGE_VERSION],' && \
		echo '  [$(PACKAGE_VERSION)])' && \
		echo 'm4_define([AT_PACKAGE_STRING],' && \
		echo '  [$(PACKAGE_STRING)])' && \
		echo 'm4_define([AT_PACKAGE_BUGREPORT],' && \
		echo '  [$(PACKAGE_BUGREPORT)])'; \
		echo 'm4_define([AT_PACKAGE_URL],' && \
		echo '  [$(PACKAGE_URL)])'; \
	} >'$(srcdir)/package.m4'

#2013-10-11 AMR XXX: $(shell x) is a GNUMake extension
check-local: test/atconfig atlocal $(TESTSUITE)
	$(SHELL) '$(TESTSUITE)' AUTOTEST_PATH='$(shell pwd)' $(TESTSUITEFLAGS)

clean-local:
	test ! -f '$(TESTSUITE)' || \
		$(SHELL) '$(TESTSUITE)' --clean

AUTOM4TE = $(SHELL) $(srcdir)/build-aux/missing --run autom4te
AUTOTEST = $(AUTOM4TE) --language=autotest
$(TESTSUITE): $(srcdir)/test/testsuite.at $(TESTSUITE_FILES) $(srcdir)/package.m4
	$(AUTOTEST) -I '$(srcdir)/test' -I $(srcdir) -o $@.tmp $@.at
	mv $@.tmp $@
