# Copyright 2016 Michael Thomas (malinka) <malinka@entropy-development.com>
# Distributed under the terms of the GNU Lesser General Public License v3

AC_PREREQ([2.53])
m4_pattern_forbid([^AX_])
m4_pattern_forbid([^EX_])

AC_INIT([Asteria], [0.0.1], [bugs@entropy-development.com])
AC_CONFIG_SRCDIR([src/Exception.hh])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_TESTDIR([test])
AM_INIT_AUTOMAKE([-Wall foreign subdir-objects dist-xz no-dist-gzip])

AM_PROG_AR
LT_INIT

AC_PROG_LN_S
AC_PROG_CXX
EX_BASE_FLAGS

AC_LANG_PUSH([C++])

AX_PTHREAD
[LIBS="$PTHREAD_LIBS $LIBS"]
[CFLAGS="$PTHREAD_CFLAGS $CFLAGS"]
[CXXFLAGS="$PTHREAD_CFLAGS $CXXFLAGS"]

EX_WITH_GTEST
EX_FLAGS

EX_WITH_ENTROPY
EX_WITH_HECATE
EX_WITH_TETHYS
EX_WITH_THEIA
EX_WITH_AOEDE
EX_WITH_MNEMOSYNE

[LIBS="$GTEST_LIBS $ENTROPY_LIBS $HECATE_LIBS $TETHYS_LIBS $THEIA_LIBS $AOEDE_LIBS $MNEMOSYNE_LIBS"]
[CPPFLAGS="$GTEST_CPPFLAGS $ENTROPY_CPPFLAGS $HECATE_CPPFLAGS $TETHYS_CPPFLAGS $THEIA_CPPFLAGS $AOEDE_CPPFLAGS $MNEMOSYNE_CPPFLAGS"]
[LDFLAGS="$GTEST_LDFLAGS $ENTROPY_LDFLAGS $HECATE_LDFLAGS $TETHYS_LDFLAGS $THEIA_LDFLAGS $AOEDE_LDFLAGS $MNEMOSYNE_LDFLAGS"]

AC_LANG_POP([C++])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile atlocal:test/atlocal.in])
AC_OUTPUT
